# alot

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
coverage/: index.html
coverage/src/: index.html  lib.rs.html  ordered.rs.html  unordered.rs.html
main/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/alot/: all.html  index.html  sidebar-items.js  struct.Generation.html  struct.LotId.html
main/alot/ordered/: index.html  sidebar-items.js  struct.Drain.html  struct.EntryIter.html  struct.IntoIter.html  struct.Iter.html  struct.OrderedLots.html
main/alot/unordered/: index.html  sidebar-items.js  struct.Drain.html  struct.DrainAll.html  struct.EntryIter.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.Lots.html  trait.DrainFilter.html
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/fmt/: trait.Debug.js
main/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/src/alot/: lib.rs.html  ordered.rs.html  unordered.rs.html
main/trait.impl/alot/unordered/: trait.DrainFilter.js
main/trait.impl/core/clone/: trait.Clone.js
main/trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
src/: lib.rs  ordered.rs  unordered.rs
xtask/src/: main.rs
(+22 files in other folders)
