[package]
name = "alot"
description = "A forbid-unsafe, generational slot map with usize-sized IDs"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65.0"
repository = "https://github.com/khonsulabs/alot"
readme = "./README.md"

[dependencies]

[workspace]
members = ["xtask"]
